@@ -2,6 +2,9 @@ SubVersion: $Id$
 	
 Log:
 
+- 22/01/2008, version 1.1.1: roms
+	- added unknown directory list command for NSpire
+	
 - 16/10/2007, version 1.1.0: roms
 	- adding NSpire support...
 	- unified Product Number & Main Calc Id into Product Id and maintained compatibility
